--- a/src/css/tailwind.base.css
+++ b/src/css/tailwind.base.css
@@ -4,36 +4,105 @@
 @import 'tailwindcss/utilities';
 
 .pokemon-wrapper {
-  @apply grid grid-cols-6 gap-8 justify-center py-10;
+  @apply grid grid-cols-1 md:grid-cols-3 lg:grid-cols-6 gap-4 justify-center py-10;
 }
 
 @layer components {
-  .card-pokemon {
-    @apply rounded-lg bg-white px-4 py-4;
-    box-shadow: 0px 2px 16px rgba(0, 0, 0, 0.05);
-    .sprite {
-      @apply flex justify-center mb-4;
-    }
-    h3 {
-      @apply text-lg font-semibold leading-7 capitalize;
-    }
-    p {
-      @apply font-medium text-subtitle text-sm leading-5 mt-2;
-    }
-    .types {
-      @apply flex mt-2;
-      .badge {
-        @apply h-5 bg-primary flex items-center justify-center text-[.75rem] py-2 px-4 rounded-lg capitalize;
-        & + .badge {
-          @apply ml-2;
-        }
-      }
-    }
-    .btn-container {
-      @apply mt-4;
-      button {
-        @apply bg-primary flex items-center justify-center w-full h-8 px-4 py-2 rounded-lg;
+  .navtabs {
+    @apply flex;
+    button {
+      @apply px-4 py-3 border rounded-lg transition hover:bg-primary hover:text-title max-w-full lg:max-w-[9.0625rem] w-full font-medium flex-1;
+      border-color: #6b6868;
+      color: #6b6868;
+      & + button {
+        @apply ml-2;
       }
     }
   }
+}
+
+.card-pokemon {
+  @apply rounded-lg bg-white px-4 py-4;
+  box-shadow: 0px 2px 16px rgba(0, 0, 0, 0.05);
+  .sprite {
+    @apply flex justify-center mb-4;
+  }
+  h3 {
+    @apply text-lg font-semibold leading-7 capitalize;
+  }
+  p {
+    @apply font-medium text-subtitle text-sm leading-5 mt-2;
+  }
+  .types {
+    @apply flex mt-2;
+    .badge {
+      @apply flex items-center justify-center text-[.75rem] py-2 px-4 rounded-lg capitalize;
+      & + .badge {
+        @apply ml-2;
+      }
+    }
+  }
+  .btn-container {
+    @apply mt-4;
+    button {
+      @apply bg-primary flex items-center justify-center w-full  px-4 py-2 rounded-lg;
+    }
+  }
+}
+
+.fire {
+  background-color: #ffa3a3;
+}
+
+.grass {
+  background-color: #96e0b5;
+}
+
+.electric {
+  background-color: #f8e68d;
+}
+
+.water,
+.ice {
+  background-color: #73c9f1;
+}
+
+.ground {
+  background-color: #d4af89;
+}
+
+.rock {
+  background-color: #c5c5be;
+}
+
+.fairy {
+  background-color: #e8c7ee;
+}
+
+.poison {
+  background-color: #c48be6;
+}
+
+.bug {
+  background-color: #f3ce9a;
+}
+
+.dragon {
+  background-color: #7796d1;
+}
+
+.psychic {
+  background-color: #da8add;
+}
+
+.flying {
+  background-color: #dee8ee;
+}
+
+.fighting {
+  background-color: #dbcfb7;
+}
+
+.normal {
+  background-color: #ecebeb;
 }
